--- a/src/assets/css/globals.css
+++ b/src/assets/css/globals.css
@@ -72,6 +72,16 @@
   text-align: center;
 }
 
-.rdt_Pagination{
-  border: 0!important;
+.rdt_Pagination {
+  border: 0 !important;
+}
+
+.panel-mobile {
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
 }
